[package]
name = "tls-async"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.1"
license = "MIT"
readme = "README.md"
description = """
TLS support for AsyncRead/AsyncWrite using native-tls
"""
categories = ["asynchronous", "network-programming"]

[dependencies]
log = "0.4.1"
native-tls = "0.2"

[dependencies.futures]
version = "0.3.0-alpha.12"
package = "futures-preview"
features = ["compat", "io-compat", "std"]

[dev-dependencies]
cfg-if = "0.1"
romio = "0.3.0-alpha.1"
tokio = "0.1"

[dev-dependencies.env_logger]
version = "0.5"
default-features = false

[target.'cfg(all(not(target_os = "macos"), not(windows), not(target_os = "ios")))'.dev-dependencies]
openssl = "0.10"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dev-dependencies]
security-framework = "0.2"

[target.'cfg(windows)'.dev-dependencies]
schannel = "0.1"

[target.'cfg(windows)'.dev-dependencies.winapi]
version = "0.3"
features = [
  "lmcons",
  "basetsd",
  "minwinbase",
  "minwindef",
  "ntdef",
  "sysinfoapi",
  "timezoneapi",
  "wincrypt",
  "winerror",
]
