[package]
name = "tls-async"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.6"
license = "MIT"
readme = "README.md"
description = """
TLS support for AsyncRead/AsyncWrite using native-tls
"""
authors = ["Danny Browning <bdbrowning2@gmail.com>", "Carl Lerche <me@carllerche.com>"]
categories = ["asynchronous", "network-programming"]
documentation = "https://docs.rs/tls-async/"
repository = "https://github.com/dbcfd/tls-async"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4.1"
native-tls = "0.2"

[dependencies.futures]
version = "0.3.0-alpha.16"
package = "futures-preview"
features = ["compat", "io-compat", "std"]

[dev-dependencies]
cfg-if = "0.1"
romio = "0.3.0-alpha.8"
tokio = "0.1"

[dev-dependencies.env_logger]
version = "0.5"
default-features = false

[target.'cfg(all(not(target_os = "macos"), not(windows), not(target_os = "ios")))'.dev-dependencies]
openssl = "0.10"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dev-dependencies]
security-framework = "0.2"

[target.'cfg(windows)'.dev-dependencies]
schannel = "0.1"

[target.'cfg(windows)'.dev-dependencies.winapi]
version = "0.3"
features = [
  "lmcons",
  "basetsd",
  "minwinbase",
  "minwindef",
  "ntdef",
  "sysinfoapi",
  "timezoneapi",
  "wincrypt",
  "winerror",
]
